fix margin and center align on nav

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,6 +1,7 @@
 .main-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: .5rem 1rem;
   border-bottom: 2px solid;
 }
@@ -9,7 +10,6 @@
   display: flex;
   align-items: center;
   margin-left: 1.5rem;
-  margin-top: .5rem;
 }
 
 .nav-actions > div {
